# util

./: .gitignore  README.md  Transformer.ipynb  attention.ipynb  demo.py  hello.cpp  open3d.ipynb  test.cpp  test2.cpp  utils.m  几何算法.ipynb  图片处理.ipynb  文件处理.ipynb  画图.ipynb  矩阵运算.ipynb
CodeByHand/: CMakeLists.txt  test.cpp
CodeByHand/ProducerConsumerModel/: main.cpp
CodeByHand/Random/: main.cpp  test.cpp
CodeByHand/STL/: Thread_pool.cpp  hash_table.cpp  redblacktree.cpp  shared_ptr.cpp  sort.cpp
CodeByHand/ThreadPool/: threadpool.h
CodeByHand/Tree/: RedBlackTree.cpp
CodeByHand/convolution/: main.cpp
CodeByHand/虚函数表/: src.cpp
Math/: 函数图像草稿.ipynb  高斯分布.ipynb
graph_algorithm/: Intersection_two_tri.cpp
graph_algorithm/BVH/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
graph_algorithm/InOneWeekend/: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
graph_algorithm/PathTracing/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  binary.ppm  binary_spp16.ppm  (+2 more)
graph_algorithm/Rasterization/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.hpp
matlab/: 结果可视化.m  计算准确率.m
test/: CMakeLists.txt  shared_mutex.cpp  test.cpp
(+30 files in other folders)
